--- a/templates/article/new.html.twig
+++ b/templates/article/new.html.twig
@@ -6,7 +6,7 @@
     <div class="container my-5">
         <h1 class="h2">Nouvel article</h1>
 
-        {{ include('article/_form.html.twig') }}
+        {{ include('article/_form-create.html.twig') }}
 
     </div>
 {% endblock %}
