--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -1,10 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Article{% endblock %}
+{% block title %}{{article.title}}{% endblock %}
 
 {% block body %}
 <div class="my-5">
     <div class="container">
+        {% if is_granted('ROLE_ADMIN') %}
+        <a class="btn btn-outline-primary mb-3" href="{{path('app_article_edit', {id:article.id})}}">Modifier</a>
+        {% endif %}
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 {% for image in article.images %}
