--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,10 +8,13 @@
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{asset('style.css')}}">
 </head>
 
 <body>
     {{ include('components/navbar.html.twig')}}
+    {{ include('components/toast.html.twig') }}
+
     {% block body %}{% endblock %}
     <footer style="height: 300px" class="bg-light d-flex align-items-center justify-content-center">
         <h1 class="text-center">FOOTER</h1>
@@ -21,25 +24,25 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-    <script type="text/javascript"
-        src="https://cdn.tiny.cloud/1/000e98r5ejnk39y3tkknc2y0b8qh895bn5qv1jrc6a5v3ceu/tinymce/5/tinymce.min.js"></script>
-
+        <script src="https://cdn.tiny.cloud/1/l2qq63pef04s6nh91ukzujhule2e15drkyw5smjcycuiafuo/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
         // Initialisation de TinyMCE
 
         tinymce.init({
             selector: 'textarea',
             menubar: false,
+
             toolbar_mode: 'wrap',
-            color_cols: 5,
             toolbar: [
                 { name: 'history', items: ['undo', 'redo', 'forecolor'] },
                 { name: 'styles', items: ['styles'] },
                 { name: 'formatting', items: ['bold', 'italic'] },
                 { name: 'alignment', items: ['alignleft', 'aligncenter', 'alignright', 'alignjustify'] },
                 { name: 'indentation', items: ['outdent', 'indent'] },
-            ]
+            ],
+            ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant")),
         });
+
 
     </script>
 
