--- a/templates/components/articleCard.html.twig
+++ b/templates/components/articleCard.html.twig
@@ -1,17 +1,22 @@
 <div class="card">
+    {% if article.images | length %}
     <div class="card-image">
         <img src="{{asset('assets/images/' ~ article.images[0].path )}}" class="card-img-top" alt="...">
     </div>
+    {%endif %}
     <div class="card-body">
         {{ include('components/category.html.twig', { category: article.category }) }}
         <div class="my-3">
             <h5 class="card-title text-truncate">{{article.title}}</h5>
+
             <p class="card-text text-truncate">
-                {{article.content}}
+                {{article.content | striptags }}
             </p>
+
         </div>
-        <span class="d-block mb-3 text-secondary"> publié par : {{article.user.firstName}}
-            {{article.user.lastName}} </span>
+        <span class="d-block mb-3 text-secondary"> publié par : {{article.user.firstName}} {{article.user.lastName}}
+            <br> {{article.createdAt | ago}}
+        </span>
         <a href="{{path('app_article_show', {id: article.id})}}" class="btn btn-primary">Voir plus</a>
     </div>
 </div>
