--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Contact index{% endblock %}
+{% block title %}Mail{% endblock %}
 
 {% block body %}
 <div class="container my-5">
-    <h1 class="h3">Boite email</h1>
+    <h1 class="h3 me-3">Boite email</h1>
     <div class="table-responsive">
         <table class="table">
             <thead class="bg-primary text-white">
