--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -1,10 +1,21 @@
 <nav class="navbar sticky-top py-3 shadow align-items-center bg-white">
     <div class="container">
         <div class="navbar-left d-flex align-items-center">
+            <div class="dropdown d-sm-block d-md-none">
+                <button class="dropdown-toggle btn btn-outline-secondary me-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <svg width="25" height="auto" class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiBox-root css-1om0hkc" focusable="false"
+                        aria-hidden="true" viewBox="0 0 24 24" data-testid="MenuIcon">
+                        <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
+                    </svg>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/">Articles</a></li>
+                </ul>
+            </div>
             <a href="#" class="fw-bold fs-3 border-start border-bottom border-3 border-primary text-danger">
                 <span>BBN</span>
             </a>
-            <ul class="links d-flex m-0">
+            <ul class="links d-md-flex m-0 d-sm-none">
                 <li class="me-3">
                     <a href="/">Articles</a>
                 </li>
@@ -12,10 +23,9 @@
         </div>
         <div class="navbar-right d-flex align-items-center">
             {% if is_granted('ROLE_USER') and not is_granted('ROLE_ADMIN') %}
-            <button type="button" class="btn btn-outline-primary me-3" data-bs-toggle="modal"
-                data-bs-target="#exampleModal">
+            <a href="{{path('app_contact_new')}}" class="btn btn-outline-primary me-3">
                 contacter l'admin
-            </button>
+            </a>
             {% endif %}
             <div class="dropdown avatar">
                 <div style="width: 40px; height: 40px; border-radius: 90px; cursor: pointer"
@@ -45,21 +55,6 @@
     </div>
 </nav>
 
-{% if is_granted('ROLE_USER') and not is_granted('ROLE_ADMIN') %}
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Contacter l'administrateur</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                {{ include('contact/_form.html.twig') }}
-            </div>
-        </div>
-    </div>
-</div>
-{% endif %}
 <style>
     .navbar * {
         text-decoration: none;
