--- a/templates/components/toast.html.twig
+++ b/templates/components/toast.html.twig
@@ -1,14 +1,14 @@
-<div aria-live="polite" aria-atomic="true" style="position: fixed; top: 0; right: 0; z-index: 9000;">
-    <div class="toast" style="position: absolute; top: 0; right: 0;">
-      <div class="toast-header">
-        <strong class="mr-auto">Bootstrap</strong>
-        <small>11 mins ago</small>
-        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="toast-body">
-        Hello, world! This is a toast message.
-      </div>
-    </div>
+
+<div class="container my-3">
+  {% for flash_message in app.flashes('success') %}
+  <div class="alert alert-success">
+    {{ flash_message }}
   </div>
+  {% endfor %}
+
+  {% for flash_message in app.flashes('error') %}
+  <div class="alert alert-danger">
+    {{ flash_message }}
+  </div>
+  {% endfor %}
+</div>
